[package]
name = "kohonen"
version = "0.2.0"
authors = ["m-lange <martin_lange_@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = "0.5.5"
easy_graph = { git = "https://github.com/mlange-42/easy_graph.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TODO put CLI in feature
structopt = "0.3"

[dev-dependencies]
statistical = "1.0.0"

