[package]
name = "kohonen"
version = "0.2.2"
authors = ["m-lange <martin_lange_@gmx.net>"]
edition = "2018"

[[bin]]
name = "kohonen"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false



[dependencies]
csv = "1.1"
rand = "0.5.5"
easy_graph = { git = "https://github.com/mlange-42/easy_graph.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dont_disappear = "3.0.1"

# TODO put CLI in feature
structopt = "0.3"

[dev-dependencies]
statistical = "1.0.0"

